src-tauri/tests/snapshots/pipeline_scenarios__asst_empty_content_fallback.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: text
      text: fallback text
  status:
    type: complete
    reason: stop
  streaming: ~
