src-tauri/tests/snapshots/pipeline_scenarios__asst_redacted_thinking.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: reasoning
      text_length: 19
      text_preview: "[Thinking redacted]"
      streaming: ~
  status:
    type: complete
    reason: stop
  streaming: ~
