src-tauri/tests/snapshots/pipeline_scenarios__asst_server_tool_use.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 1
  content:
    - type: tool-call
      tool_name: WebSearch
      tool_call_id: st1
      args_keys:
        - query
      args_text_length: 15
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
