src-tauri/tests/snapshots/pipeline_scenarios__asst_tool_use_missing_id_name.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: a1
  content_length: 2
  content:
    - type: tool-call
      tool_name: unknown
      tool_call_id: tc-0
      args_keys:
        - x
      args_text_length: 7
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
    - type: tool-call
      tool_name: unknown
      tool_call_id: tc-1
      args_keys:
        - y
      args_text_length: 7
      has_result: false
      result_kind: ~
      result_preview: ~
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
