src-tauri/tests/snapshots/pipeline_scenarios__cloud_autopush_failure_notice_renders_as_system_error.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: system
  id: msg-1
  content_length: 1
  content:
    - type: text
      text: "Error: Cloud auto-push failed — this turn's work i...l: unable to access 'https://github.com/o/r.git/')[len:227]"
  status: ~
  streaming: ~
