src-tauri/tests/snapshots/pipeline_scenarios__codex_collab_close_agent.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: subagent_close
      tool_call_id: codex-collab-close5
      args_keys:
        - agentsStates
        - receiverThreadIds
        - senderThreadId
        - status
        - tool
      args_text_length: 164
      has_result: true
      result_kind: string
      result_preview: OK
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
