src-tauri/tests/snapshots/pipeline_scenarios__codex_collab_spawn_agent_renders_with_nickname_and_role.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: subagent_spawn
      tool_call_id: codex-collab-spawn1
      args_keys:
        - agentsStates
        - model
        - prompt
        - reasoningEffort
        - receiverThreadIds
        - senderThreadId
        - status
        - tool
      args_text_length: 322
      has_result: true
      result_kind: string
      result_preview: OK
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
