src-tauri/tests/snapshots/pipeline_scenarios__codex_collab_unknown_nickname_falls_back_to_thread_id.snap
---
source: tests/pipeline_scenarios.rs
expression: run_normalized(msgs)
---
- role: assistant
  id: msg-1
  content_length: 1
  content:
    - type: tool-call
      tool_name: subagent_wait
      tool_call_id: codex-collab-wait4
      args_keys:
        - agentsStates
        - receiverThreadIds
        - senderThreadId
        - status
        - tool
      args_text_length: 177
      has_result: true
      result_kind: string
      result_preview: "thread_sub_x — completed\nDone."
      streaming_status: ~
  status:
    type: complete
    reason: stop
  streaming: ~
